--- a/userprofile_app/templates/userprofile_app/articles/article_comment_form.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_comment_form.html
@@ -67,25 +67,28 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="label-text">نویسنده</label>
-                                    <input class="form-control form--control pl-3" name="user" type="text" value="{{ comment.user }}" disabled>
+                                    <input class="form-control form--control pl-3" name="user" type="text"
+                                           value="{{ comment.user }}" disabled>
                                 </div>
                             </div>
 
                             <!-- text -->
-                            <div class="input-box col-lg-12">
-                                <label class="label-text">نظر</label>
+                            <div class="col-lg-12">
                                 <div class="form-group">
-                                    <textarea name="text" cols="40" rows="4" class="form-control form--control user-text-editor pl-3" required=""
-                                              id="id_short_description" {% if read_only %}disabled{% endif %}>{{ comment.text }}</textarea>
+                                    <label class="label-text">نظر</label>
+                                    <textarea name="text" cols="40" rows="4"
+                                              class="form-control form--control pl-3"
+                                              {% if read_only %}disabled{% endif %}>{{ comment.text }}</textarea>
                                 </div>
                             </div>
 
                             <!-- reply_text -->
-                            <div class="input-box col-lg-12">
-                                <label class="label-text">پاسخ به نظر</label>
+                            <div class="col-lg-12">
                                 <div class="form-group">
-                                   <textarea name="reply_text" cols="40" rows="4" class="form-control form--control user-text-editor pl-3" required=""
-                                              id="id_short_description">{{ comment.articlecomment_set.all.first.text|default_if_none:'' }}</textarea>
+                                    <label class="label-text">پاسخ به نظر</label>
+                                    <textarea name="reply_text" cols="40" rows="4"
+                                              class="form-control form--control user-text-editor pl-3"
+                                              {% if read_only %}disabled{% endif %}>{{ comment.articlecomment_set.all.first.text|default_if_none:'' }}</textarea>
                                 </div>
                             </div>
 
@@ -93,7 +96,8 @@
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label class="label-text mr-5">تاریخ نظر</label>
-                                    <input class="form-control form--control pl-3" name="create_date" type="text" value="{{ comment.create_date|to_shamsi }}" disabled>
+                                    <input class="form-control form--control pl-3" name="create_date" type="text"
+                                           value="{{ comment.create_date|to_shamsi }}" disabled>
                                 </div>
                             </div>
 
@@ -101,7 +105,10 @@
                             <div class="col-lg-3" style="margin-top: 40px;">
                                 <div class="form-group">
                                     <label class="label-text mr-5">فعال / غیرفعال</label>
-                                    <input type="checkbox" name="is_active" value="{{ comment.is_active }}" class="form-check-input" id="id_is_active" checked="">
+                                    <input type="checkbox" name="is_active"
+                                           class="form-check-input" id="id_is_active"
+                                           {% if comment.is_active %}checked{% endif %}
+                                           {% if read_only %}disabled{% endif %}>
                                 </div>
                             </div>
 
@@ -109,7 +116,10 @@
                             <div class="col-lg-3" style="margin-top: 40px;">
                                 <div class="form-group">
                                     <label class="label-text mr-5">حذف شده / نشده</label>
-                                    <input type="checkbox" name="is_delete" value="{{ comment.is_delete }}" class="form-check-input" id="id_is_active">
+                                    <input type="checkbox" name="is_delete"
+                                           class="form-check-input" id="id_is_delete"
+                                           {% if comment.is_delete %}checked{% endif %}
+                                           {% if read_only %}disabled{% endif %}>
                                 </div>
                             </div>
 
