--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -54,7 +54,7 @@
                                 d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z">
                         </path>
                     </svg>
-                    مدیریت مقالات
+                    مقاله ها
                     <span style="margin-right: auto; font-size: 12px;">▼</span>
                 </a>
 
@@ -67,7 +67,7 @@
 
                     <a href="{% url 'userprofile_app:articles_list' %}"
                        class="dropdown-item {% if request.resolver_match.url_name == 'articles_list' %}active bg-secondary text-white{% endif %}"
-                       style="padding: 6px 25px; color: #6c757d;">مقاله ها</a>
+                       style="padding: 6px 25px; color: #6c757d;">لیست مقاله ها</a>
 
                     <a href="{% url 'userprofile_app:article_categories_list' %}"
                        class="dropdown-item {% if request.resolver_match.url_name == 'article_categories_list' %}active bg-secondary text-white{% endif %}"
@@ -108,7 +108,7 @@
 
                     <a href="{% url 'userprofile_app:lectures_list' %}"
                        class="dropdown-item {% if request.resolver_match.url_name == 'lectures_list' %}active bg-secondary text-white{% endif %}"
-                       style="padding: 6px 25px; color: #6c757d;">مقاله ها</a>
+                       style="padding: 6px 25px; color: #6c757d;">لیست سخنرانی ها</a>
 
                     <a href="{% url 'userprofile_app:lecture_categories_list' %}"
                        class="dropdown-item {% if request.resolver_match.url_name == 'lecture_categories_list' %}active bg-secondary text-white{% endif %}"
